Table author {
  id int [pk, increment]
  name varchar(100) [not null, unique]
  bio text
  birth_date timestamp
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Авторы книг'
}

Table book {
  id int [pk, increment]
  title varchar(200) [not null]
  isbn varchar(13) [not null, unique]
  description text
  published_year int [not null]
  genre varchar(50)
  author_id int [not null]
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Книги в библиотеке. ISBN должен содержать 13 цифр'
  
  indexes {
    (author_id) [name: 'idx_book_author']
    (isbn) [name: 'idx_book_isbn', unique]
  }
}

Table reader {
  id int [pk, increment]
  email varchar(100) [not null, unique]
  full_name varchar(150) [not null]
  phone varchar(20)
  address text
  registered_at date [not null, default: `current_date`]
  is_active boolean [not null, default: true]
  
  Note: 'Читатели библиотеки. Email должен содержать @mail.ru, @yandex.ru или @gmail.com'
  
  indexes {
    (email) [name: 'idx_reader_email', unique]
    (full_name) [name: 'idx_reader_name']
  }
}

Table loan {
  id int [pk, increment]
  book_id int [not null]
  reader_id int [not null]
  loan_date date [not null, default: `current_date`]
  due_date date [not null]
  return_date date
  
  Note: 'Выдача книг. Статус вычисляется автоматически'
  
  indexes {
    (book_id, return_date) [name: 'idx_loan_book_return', unique]
    (reader_id, loan_date) [name: 'idx_reader_loans']
    (due_date) [name: 'idx_due_date']
  }
}

Ref: book.author_id > author.id
Ref: loan.book_id > book.id
Ref: loan.reader_id > reader.id